syntax = "proto3";
import "v1/universal/universal.proto";
package api.v1.logic.relationship;
option go_package = "./api/v1/relationship;relationship";
service relationShip {
    rpc SendFriendRequest (SendFriendRequestRequest) returns (SendFriendRequestResponse) {}
    rpc GetFriendRequestList (GetFriendRequestListRequest) returns (GetFriendRequestListResponse) {}
    rpc GetFriendRequest( GetFriendRequestRequest) returns (GetFriendRequestResponse) {}
    rpc GetFriendRequests (GetFriendRequestsRequest) returns (GetFriendRequestsResponse) {}
    rpc DealFriendRequest (DealFriendRequestRequest) returns (DealFriendRequestResponse) {}
    rpc GetFriendList (GetFriendListRequest) returns (GetFriendListResponse) {}
    rpc DeleteFriend (DeleteFriendRequest) returns (DeleteFriendResponse) {}
    rpc GetFriendInfo (GetFriendInfoRequest) returns (GetFriendInfoResponse) {}
    rpc UpdateFriendInfo (UpdateFriendInfoRequest) returns (UpdateFriendInfoResponse) {}
    rpc CreateFriendGroup (CreateFriendGroupRequest) returns (CreateFriendGroupResponse) {}
    rpc UpdateFriendGroup (UpdateFriendGroupRequest) returns (UpdateFriendGroupResponse) {}
    rpc DeleteFriendGroup (DeleteFriendGroupRequest) returns (DeleteFriendGroupResponse) {}
    rpc GetFriendGroupList (GetFriendGroupListRequest) returns (GetFriendGroupListResponse) {}
}
message SendFriendRequestRequest {
    int64 requester_id = 1;
    int64 receiver_id = 2;
    string note_name = 3;
    string desc = 4;
    string group_name = 5;
}
message SendFriendRequestResponse {
    universal.FriendRequest friend_request = 1;
}
message GetFriendRequestListRequest {
    int64 user_id = 1;
    int64 page_number = 2;
    int64 page_size = 3;
}
//message FriendRequest{
//    int64 request_id = 1;
//    int64 requester_id = 2;
//    int64 receiver_id = 3;
//    string desc = 5;
//    string status = 6;
//    string create_time = 7;
//    string update_time = 8;
//    string nick_name = 9;
//    string avatar = 10;
//}
message GetFriendRequestListResponse {
    repeated universal.FriendRequest friend_requests = 1;
    int64 total = 2;
}
message GetFriendRequestRequest {
    int64 request_id = 1;
}
message GetFriendRequestResponse {
    universal.FriendRequest friend_request = 1;
}
message GetFriendRequestsRequest{
    repeated int64 request_ids = 1;
}
message GetFriendRequestsResponse{
    repeated universal.FriendRequest friend_requests = 1;
}
message DealFriendRequestRequest {
    int64 request_id = 1;
    string status = 2;
    string note_name = 3;
    string group_name = 4;
}
message DealFriendRequestResponse {
}
message GetFriendListRequest {
    int64 user_id = 1;
}
message Friend {
    string friend_id = 1;
    string nick_name = 3;
    string note_name = 4;
    string avatar = 5;
    string group_name = 6;
}
message GetFriendListResponse {
    repeated Friend friends = 1;
}
message DeleteFriendRequest {
    int64 user_id = 1;
    int64 friend_id = 2;
}
message DeleteFriendResponse {
}
message GetFriendInfoRequest {
    int64 friend_id = 1;
}
message GetFriendInfoResponse {
    string city_name = 1;
    string province_name = 2;
    string desc = 3;
    string account_id = 4;
}
message UpdateFriendInfoRequest {
    int64 user_id = 1;
    int64 friend_id = 2;
    string note_name = 3;
    string group_name = 4;
}
message UpdateFriendInfoResponse {
}
message CreateFriendGroupRequest {
    int64 user_id = 1;
    string group_name = 2;
}
message CreateFriendGroupResponse {
}
message UpdateFriendGroupRequest {
    int64 user_id = 1;
    string group_name = 2;
    string new_group_name = 3;
}
message UpdateFriendGroupResponse {
}
message DeleteFriendGroupRequest {
    int64 user_id = 1;
    string group_name = 2;
}
message DeleteFriendGroupResponse {
}
message GetFriendGroupListRequest {
    int64 user_id = 1;
}
message GetFriendGroupListResponse {
    repeated string group_names = 1;
}