syntax = "proto3";
package api.v1.universal;
option go_package = "message/api/v1/universal;universal";
message FriendRequest{
  int64 request_id = 1;
  int64 requester_id = 2;
  int64 receiver_id = 3;
  string desc = 5;
  string status = 6;
  string create_time = 7;
  string update_time = 8;
  string nick_name = 9;
  string avatar = 10;
}
message Friend {
  string friend_id = 1;
  string nick_name = 3;
  string note_name = 4;
  string avatar = 5;
  string group_name = 6;
}
message Message{
  string message_id = 1;
  int64 type = 2;
  string content = 3;
  string sender_id = 4;
  string receiver_id = 5;
  string send_at = 6;
}
message UnreadMessageInfo{
  Message latest_message = 1;
  int64 unread_count = 2;
}
message Group{
  string group_id = 1;
  string group_name = 2;
  string group_avatar = 3;
  string group_desc = 4;
  int64 group_leader_id = 5;
  string create_at = 6;
}
message GroupMember{
  string group_id = 1;
  string member_id = 2;
  string member_note_name = 3; //申请为群成员时，不填写群昵称的话，默认就是用户的昵称
  string member_avatar = 4;
  string join_at = 5;
  string member_role = 6; //群主，管理员，普通成员
}